@@ -2,7 +2,7 @@ dnl // Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.50)
 AC_INIT(bochs.h)
-AC_REVISION([[$Id: configure.in,v 1.379 2008-12-28 20:30:48 sshwarts Exp $]])
+AC_REVISION([[$Id: configure.in,v 1.380 2009-01-12 19:15:35 sshwarts Exp $]])
 AC_CONFIG_HEADER(config.h)
 AC_CONFIG_HEADER(ltdlconf.h)
 
@@ -1233,6 +1233,28 @@ AC_ARG_ENABLE(disasm,
     DISASM_VAR='$(DISASM_LIB)'
   ])
 AC_SUBST(DISASM_VAR)
+
+AC_MSG_CHECKING(enable Bochs internal debugger GUI)
+AC_ARG_ENABLE(debugger-gui,
+  [  --enable-debugger-gui             compile in support for Bochs internal debugger GUI],
+  [if test "$enableval" = yes; then
+    AC_MSG_RESULT(yes)
+    AC_DEFINE(BX_DEBUGGER_GUI, 1)
+   else
+    AC_MSG_RESULT(no)
+    AC_DEFINE(BX_DEBUGGER_GUI, 0)
+   fi],
+  [
+    if test "$bx_debugger" = 1; then
+      AC_MSG_RESULT(yes)
+      AC_DEFINE(BX_DEBUGGER_GUI, 1)
+    else
+      AC_MSG_RESULT(no)
+      AC_DEFINE(BX_DEBUGGER_GUI, 0)
+    fi
+    ]
+  )
+
 
 AC_MSG_CHECKING(for ALL optimizations enabled)
 AC_ARG_ENABLE(all-optimizations,
